updated libs and shit